<resources>

    <string name="app_name">CustomerOverview</string>

    <!-- common -->
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="id">ID</string>
    <string name="company">Company</string>
    <string name="calls">Calls</string>
    <string name="registration">Registration</string>
    <string name="active">Is active?</string>

    <!-- about -->
    <string name="about_title">About</string>
    <string name="about_text">This Android application was created as a running project for the User Interfaces 2 course
        at the Karel de Grote University College. It is used throughout the course to implement and exercise acquired
        skills. It will be continually expanded throughout the semester.
    </string>
    <string name="about_classgroup">Class group</string>
    <string name="about_kb_name">Kristof Buts</string>
    <string name="about_kb_email">kristof.buts@student.kdg.be</string>
    <string name="about_kb_classgroup">INF201B</string>

    <!-- chart -->
    <string name="chart_description">Calls to service line per customer</string>

    <!-- customer detail -->
    <string name="no_of_calls">calls to service line</string>
    <string name="no_of_calls_example">5 calls to service line</string>

    <!-- menu -->
    <string name="nav_all">All customers</string>
    <string name="nav_random">Random customer</string>
    <string name="nav_data">Data overview</string>

    <!-- main -->
    <string name="prev">Previous</string>
    <string name="next">Next</string>

    <!-- order -->
    <string name="orders">Orders</string>
    <string name="order">Order</string>
    <string name="date">Date</string>
    <string name="total">Total</string>
    <string name="currency">Currency</string>

    <!-- intent keys -->
    <string name="CUSTOMER_INDEX">CUSTOMER_INDEX</string>
    <string name="CUSTOMER_IMG_URL">CUSTOMER_IMG_URL</string>
    <string name="CUSTOMER_NAME">CUSTOMER_NAME</string>
</resources>
