<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">
    <androidx.constraintlayout.widget.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/barrier2" app:barrierDirection="end"
                                              tools:layout_editor_absoluteX="411dp"
                                              app:constraint_referenced_ids="lblEmail,lblRegistration,lblName,lblActive,lblCompany,lblId,lblCalls"/>
    <Button
            android:text="@string/prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPrev" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnNext" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="150dp" app:srcCompat="@drawable/michael"
            android:id="@+id/imgCustomer"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:scaleType="fitCenter"
    />
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtId" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imgCustomer" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/barrier2"
            android:layout_marginStart="8dp" android:enabled="false" android:inputType="number"/>
    <TextView
            android:text="@string/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblId" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtId"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/txtName" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtId" app:layout_constraintStart_toEndOf="@+id/barrier2"
            android:layout_marginStart="8dp" android:enabled="false"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblName" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtName"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/txtCompany"
            app:layout_constraintTop_toBottomOf="@+id/txtName" app:layout_constraintStart_toEndOf="@+id/barrier2"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:enabled="false"/>
    <TextView
            android:text="@string/company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblCompany" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtCompany"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:id="@+id/txtEmail" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtCompany" app:layout_constraintStart_toEndOf="@+id/barrier2"
            android:layout_marginStart="8dp" android:enabled="false"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblEmail" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtEmail"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtCalls" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtEmail" app:layout_constraintStart_toEndOf="@+id/barrier2"
            android:layout_marginStart="8dp" android:enabled="false" android:layout_marginTop="8dp"
            android:inputType="number"/>
    <TextView
            android:text="@string/calls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblCalls" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/txtCalls"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:id="@+id/txtRegistration" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtCalls" app:layout_constraintStart_toEndOf="@+id/barrier2"
            android:layout_marginStart="8dp" android:enabled="false"/>
    <TextView
            android:text="@string/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblRegistration"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtRegistration"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtActive" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRegistration"
            app:layout_constraintStart_toEndOf="@+id/barrier2"
            android:layout_marginStart="8dp" android:enabled="false" android:layout_marginTop="8dp"
            android:inputType="text"/>
    <TextView
            android:text="@string/active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblActive" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintStart_toEndOf="@+id/barrier2"
            android:layout_marginStart="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/txtActive"/>
</androidx.constraintlayout.widget.ConstraintLayout>