<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/defaultimg"
            android:id="@+id/ivCustomerPhoto" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:scaleType="fitCenter"/>
    <TextView
            android:text="@string/about_kb_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvCustomerName" app:layout_constraintStart_toEndOf="@+id/ivCustomerPhoto"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="@+id/ivCustomerPhoto" android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/about_kb_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvCustomerEmail" app:layout_constraintStart_toStartOf="@+id/tvCustomerName"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvCustomerName"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
    <TextView
            android:text="@string/no_of_calls_example"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvCustomerCalls" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvCustomerEmail"
            app:layout_constraintStart_toStartOf="@+id/tvCustomerEmail" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>