<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:orientation="vertical"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Barrier android:layout_width="wrap_content" android:layout_height="wrap_content"
                                              android:id="@+id/barrier4" app:barrierDirection="end"
                                              app:constraint_referenced_ids="lblCurrency,lblTotal,lblDate"
                                              tools:layout_editor_absoluteX="411dp"/>
    <TextView
            android:text="@string/order"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lblDate"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtDate"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/txtDate" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@id/barrier4" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:enabled="false"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/txtTotal" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtDate"
            app:layout_constraintStart_toStartOf="@+id/txtDate" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:enabled="false"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtCurrency"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTotal"
            app:layout_constraintStart_toStartOf="@+id/txtTotal" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:enabled="false"/>
    <TextView
            android:text="@string/total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lblTotal" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtTotal"/>
    <TextView
            android:text="@string/currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/lblCurrency" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/txtCurrency"/>
</androidx.constraintlayout.widget.ConstraintLayout>